--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
     "react_ujs": "^2.4.4"
   },
   "devDependencies": {
+    "babel-jest": "^23.0.1",
+    "babel-preset-env": "^1.7.0",
+    "jest": "^23.1.0",
+    "react-test-renderer": "^16.4.1",
     "webpack-dev-server": "2.11.2"
   }
 }
